--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "jquery": "^3.5.0",
+    "kind-of": "^6.0.3",
     "mapbox-gl": "^1.8.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
