--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.24.6",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.5",
     "react-redux": "^7.2.0",
