--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment-timezone": "^0.5.28",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.5",
     "react-redux": "^7.2.0",
